// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/FormFieldRules All Fulfilled 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="label block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className=" mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value="perfect username"
    />
  </div>
  <ul
    className="flex flex-col"
  >
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <test-file-stub
        className="text-green"
        data-testid="icon-uniqueness"
      />
       
      <span
        className="pt-1"
      >
        Unique
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <test-file-stub
        className="text-green"
        data-testid="icon-characters"
      />
       
      <span
        className="pt-1"
      >
        Only letters, digits, _ and/or -
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <test-file-stub
        className="text-green"
        data-testid="icon-length"
      />
       
      <span
        className="pt-1"
      >
        No long than 20 characters
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Forms/FormFieldRules Some Fulfilled 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="label block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className=" mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value="$%^&"
    />
  </div>
  <ul
    className="flex flex-col"
  >
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <test-file-stub
        className="text-green"
        data-testid="icon-uniqueness"
      />
       
      <span
        className="pt-1"
      >
        Unique
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <test-file-stub
        data-testid="icon-characters"
      />
       
      <span
        className="pt-1"
      >
        Only letters, digits, _ and/or -
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <test-file-stub
        className="text-green"
        data-testid="icon-length"
      />
       
      <span
        className="pt-1"
      >
        No long than 20 characters
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Forms/FormFieldRules Some Loading 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="label block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className=" mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value="$%^&"
    />
  </div>
  <ul
    className="flex flex-col"
  >
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <test-file-stub
        className="text-green"
        data-testid="icon-uniqueness"
      />
       
      <span
        className="pt-1"
      >
        Unique
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <test-file-stub
        data-testid="icon-characters"
      />
       
      <span
        className="pt-1"
      >
        Only letters, digits, _ and/or -
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <test-file-stub
        className="animate-spin"
        data-testid="icon-length"
      />
       
      <span
        className="pt-1"
      >
        No long than 20 characters
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Forms/FormFieldRules Untouched 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="label block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className=" mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Forms/FormFieldRules With Errors 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="label block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className="error mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value="πø∆ø∑∆ˆ“ˆ“∆∆∆wefwef"
    />
    <p
      className="text-error text-sm"
    >
      The username is too long
    </p>
    <p
      className="text-error text-sm"
    >
      The username can only include lettersm digits, _ and/or -
    </p>
  </div>
  <ul
    className="flex flex-col"
  >
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <test-file-stub
        className="text-green"
        data-testid="icon-uniqueness"
      />
       
      <span
        className="pt-1"
      >
        Unique
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <test-file-stub
        data-testid="icon-characters"
      />
       
      <span
        className="pt-1"
      >
        Only letters, digits, _ and/or -
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <test-file-stub
        data-testid="icon-length"
      />
       
      <span
        className="pt-1"
      >
        No long than 20 characters
      </span>
    </li>
  </ul>
</div>
`;
